[metadata]
name = aws-cfn-update
version = 0.8.3
author = Mark van Holsteijn
url = https://github.com/binxio/aws-cfn-update
author_email = mark.vanholsteijn@xebia.com
description = Programmatically update CloudFormation templates
long_description = file: README.md
long_description_content_type = text/markdown

test_suite = tests
tests_require = pytest
license = BSD 3-Clause License
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:

zip_safe = True
include_package_data = True
install_requires =
  click
  boto3
  cfn-flip
  pytz
  croniter
  tzlocal
  ruamel.yaml
  requests
  jsonmerge
  cryptography

use_scm_version = True

[options.entry_points]
console_scripts =
    aws-cfn-update = aws_cfn_update.cli:main


[options.packages.find]
where=
  src
